--- a/index.html
+++ b/index.html
@@ -21,24 +21,76 @@
         }
 
         header {
-            background: #333;
-            color: #fff;
-            padding: 20px 0;
-            position: sticky;
-            top: 0;
-            width: 100%;
-            z-index: 1000;
-            text-align: center;
-            transition: background 0.3s;
-        }
+    background: linear-gradient(135deg, #6a11cb, #2575fc); /* Gradient background */
+    color: #fff;
+    padding: 60px 0; /* More padding for a larger header */
+    text-align: center;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    animation: fadeIn 1s; /* Fade-in animation */
+}
 
-        .resume-button {
-            background: #ff6600;
-            color: #fff;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-        }
+header h1 {
+    font-size: 3rem; /* Larger font size for the title */
+    margin: 0;
+    animation: slideIn 0.5s ease forwards; /* Slide-in animation */
+}
+
+header p {
+    font-size: 1.2rem; /* Slightly larger font size for paragraph */
+    margin: 10px 0;
+    opacity: 0;
+    animation: fadeIn 0.5s forwards 0.5s; /* Fade-in with delay */
+}
+
+header p a {
+    color: #ffdd57; /* Bright color for links */
+    text-decoration: none;
+    transition: color 0.3s; /* Transition for link color */
+}
+
+header p a:hover {
+    color: #ffffff; /* Change color on hover */
+}
+
+.resume-button {
+    background: #ff6600;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background 0.3s, transform 0.3s; /* Transition effects */
+    font-weight: bold; /* Make button text bold */
+}
+
+.resume-button:hover {
+    background: #ff4500; /* Darker shade on hover */
+    transform: scale(1.05); /* Slightly scale the button */
+}
+
+/* Keyframe animations */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 
         /* Typing effect */
         .typing-effect {
@@ -63,6 +115,22 @@
 
         section.active {
             opacity: 1;
+        }
+
+        /* Skills List */
+        .skills-list {
+            list-style: none;
+            padding: 0;
+        }
+
+        .skills-list li {
+            display: flex;
+            align-items: center;
+            margin: 5px 0;
+        }
+
+        .skills-list img {
+            margin-right: 10px;
         }
 
         /* Back to Top Button */
@@ -92,7 +160,7 @@
             <a href="assets/resume/resume.pdf" class="resume-button" download>Download Resume</a>
         </div>
     </header>
-
+    
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
@@ -158,7 +226,42 @@
     <section id="skills">
         <div class="container">
             <h2>Skills</h2>
-            <p>Languages and Tools: C++, C, Python, Linux, Node.js, Express.js, React.js, HTML/CSS, Git, MySQL, MongoDB.</p>
+            <ul class="skills-list">
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C%2B%2B_Logo.svg" alt="C++ Logo" width="30" height="30"> C++
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" alt="C Logo" width="30" height="30"> C
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg" alt="Python Logo" width="30" height="30"> Python
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/af/Tux.png" alt="Linux Logo" width="30" height="30"> Linux
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Node.js_logo.svg" alt="Node.js Logo" width="30" height="30"> Node.js
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/64/Expressjs.png" alt="Express.js Logo" width="30" height="30"> Express.js
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="React.js Logo" width="30" height="30"> React.js
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML Logo" width="30" height="30"> HTML
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="CSS Logo" width="30" height="30"> CSS
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Git-logo.svg" alt="Git Logo" width="30" height="30"> Git
+                </li>
+                <li>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0a/MySQL_textlogo.svg" alt="MySQL Logo" width="30" height="30"> MySQL
+                </li>
+                
+            </ul>
             <p>Technical Concepts: Data Structures, OOP, OS, Computer Networks, DBMS.</p>
         </div>
     </section>
